Blackpurl/src/objects/Vendor_Invoicing_Header__c.object
<CustomObject>
    <fields>
        <fullName>AccountingId__c</fullName>
        <description>Accounting Id</description>
        <label>AccountingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountingResponse__c</fullName>
        <description>Accounting Response</description>
        <label>AccountingResponse</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicable_Purchase_Tax_Name__c</fullName>
        <label>Applicable Purchase Tax Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_Formula__c</fullName>
        <formula>DATETIMEVALUE( Invoice_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date Formula</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice#</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Taxable_Total__c</fullName>
        <formula>IF( ISBLANK( Sub_Total__c ) , 0,  Sub_Total__c  -  Taxable_Total__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Taxable Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Vendor Invoicing Header Owners</relationshipLabel>
        <relationshipName>Vendor_Invoicing_Header_Owners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <description>Gives sub total with Other Charges Without Including The Taxes</description>
        <formula>Total__c + Total_Other_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SyncToken__c</fullName>
        <description>SyncToken</description>
        <label>SyncToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount_For_Other_Charges__c</fullName>
        <label>Tax Amount For Other Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Total__c</fullName>
        <description>The Total of Tax Amounts</description>
        <formula>Tax_Amount__c + Tax_Amount_For_Other_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxable_Total__c</fullName>
        <formula>IF(Tax_Total__c != null &amp;&amp; Tax_Total__c &gt; 0, Sub_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxable Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_Charges__c</fullName>
        <label>Total Other Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_With_Tax__c</fullName>
        <formula>Total__c + Total_Other_Charges__c + Tax_Amount__c + Tax_Amount_For_Other_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Number__c</fullName>
        <formula>IF( ISNULL( Invoice_Number__c ) || ISBLANK( Invoice_Number__c ) , Name , Invoice_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Invoicing Headers</relationshipLabel>
        <relationshipName>Vendor_Invoicing_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountingLastSyncTime__c</fullName>
        <description>accounting Last Sync Time</description>
        <label>accountingLastSyncTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>availForQBSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>availForQBJournalEntrySync</description>
        <label>availForQBSync</label>
        <type>Checkbox</type>
    </fields>
    <label>Vendor Invoicing Header</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_Vendor_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>availForQBSync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB Vendor Invoices</label>
    </listViews>
    <listViews>
        <fullName>In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Vendor__c</columns>
        <columns>Invoice_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VI-{0000000}</displayFormat>
        <label>Vendor Invoicing Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoicing Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>